# email_service

./: Cargo.toml  Dockerfile
configuration/: base.yaml  production.yaml
migrations/: 20240730203924_create_idempotency_table.sql  20240731010457_create_newsletter_issues_table.sql  20240731011850_create_issue_delivery_queue_table.sql
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscription.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
