[package]
name = "emailservice"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "emailservice"
path = "src/main.rs"

[dependencies]
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
actix-web = "4.6.0"
unicode-segmentation = "1"
claims = "0.7"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
serde = "1.0.115"
serde_json = "1"
config = { version = "0.13", default-features = false, features = ["yaml"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
serde-aux = "4"
validator = "0.16"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
thiserror = "1"
anyhow = "1.0"
base64 = "0.21"
sha3 = "0.9"
urlencoding = "2"
htmlescape = "0.3"
actix-web-lab = "0.18"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
hmac = { version = "0.12", features = ["std"] }
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
sha2 = "0.10"
hex = "0.4"
argon2 = { version = "0.4", features = ["std"] }
rand = { version = "0.8", features = ["std_rng"] }

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls", "cookies"]

[dev-dependencies]
linkify = "0.9"
once_cell = "1.7.2"
tokio = { version = "1", features = ["rt", "macros"]}
wiremock = "0.5"
serde_json = "1"
serde_urlencoded = "0.7.1"